--- a/index.html
+++ b/index.html
@@ -214,13 +214,13 @@
     <script>
         // Cấu hình Firebase (thay bằng cấu hình từ Firebase Console)
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
+    apiKey: "AIzaSyAcwkfh1xaXPQkKD0VJQsIUudQP3Uwp4-4",
+    authDomain: "hh18-86ba2.firebaseapp.com",
+    projectId: "hh18-86ba2",
+    storageBucket: "hh18-86ba2.firebasestorage.app",
+    messagingSenderId: "690633010228",
+    appId: "1:690633010228:web:08d3c931a41c0a42a9ae61"
+};
 
         // Khởi tạo Firebase
         let db;
